--- a/DocumentTracking/package.json
+++ b/DocumentTracking/package.json
@@ -10,6 +10,9 @@
   "author": "ronald",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mongoose": "^6.3.0",
