--- a/DocumentTracking/package.json
+++ b/DocumentTracking/package.json
@@ -10,7 +10,10 @@
   "author": "ronald",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "bootstrap": "^5.1.3",
     "express": "^4.18.1",
     "mongoose": "^6.3.0",
     "nodemon": "^2.0.16"
